After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777395 - vaapipostproc src pad caps invalid (interlace-mode, pixel-aspect-ratio)
vaapipostproc src pad caps invalid (interlace-mode, pixel-aspect-ratio)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
1.10.2
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-17 14:08 UTC by frank.huber
Modified: 2017-01-23 18:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapipostproc: set interlace mode (2.62 KB, patch)
2017-01-20 18:22 UTC, Víctor Manuel Jáquez Leal
committed Details | Review
vaapipostproc: use sink caps par if not requested (1.29 KB, patch)
2017-01-20 18:59 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description frank.huber 2017-01-17 14:08:39 UTC
When using vaapipostproc in a pipeline the src pad caps of vaapipostproc are invalid:

If the stream is not progressive and deinterlacing in vaapipostproc is disabled, the interlace-mode in the src pad caps is "progressive".

The pixel-aspect-ratio of the src pad caps is always 1/1.
Comment 1 Víctor Manuel Jáquez Leal 2017-01-17 17:14:17 UTC
(In reply to frank.huber from comment #0)
> When using vaapipostproc in a pipeline the src pad caps of vaapipostproc are
> invalid:
> 
> If the stream is not progressive and deinterlacing in vaapipostproc is
> disabled, the interlace-mode in the src pad caps is "progressive".

Yeah. I never validated this use-case. Thanks.

> 
> The pixel-aspect-ratio of the src pad caps is always 1/1.

That's strange. I remember I set that according the input GstVideInfo. Let me check it.
Comment 2 Víctor Manuel Jáquez Leal 2017-01-20 18:22:44 UTC
Created attachment 343915 [details] [review]
vaapipostproc: set interlace mode

if the vaapipostproc is configured to not do deinterlacing, the
interlace-mode in the src caps should be the same as the input caps.
Comment 3 Víctor Manuel Jáquez Leal 2017-01-20 18:59:43 UTC
Created attachment 343916 [details] [review]
vaapipostproc: use sink caps par if not requested

Use the sink caps pixel-aspect-ratio to fixate the src caps, if it
is not already set.
Comment 4 Víctor Manuel Jáquez Leal 2017-01-23 18:46:21 UTC
Attachment 343915 [details] pushed as d8abbd7 - vaapipostproc: set interlace mode
Attachment 343916 [details] pushed as 26fa4df - vaapipostproc: use sink caps par if not requested
Comment 5 Víctor Manuel Jáquez Leal 2017-01-23 18:52:26 UTC
commit a9330dcb8094acce440fc4918688fa51afc663a1
Author: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>
Date:   Fri Jan 20 19:57:52 2017 +0100

    vaapipostproc: use sink caps par if not requested

    Use the sink caps pixel-aspect-ratio to fixate the src caps, if it
    is not already set.

    https://bugzilla.gnome.org/show_bug.cgi?id=777395

commit 653bab8f1d69c4ef646ee0d1d27e0ffe70c5521e
Author: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>
Date:   Fri Jan 20 19:00:24 2017 +0100

    vaapipostproc: set interlace mode

    if the vaapipostproc is configured to not do deinterlacing, the
    interlace-mode in the src caps should be the same as the input caps.

    https://bugzilla.gnome.org/show_bug.cgi?id=777395